# jg_dev_env

./: .bash_profile  .bashrc  CMakeLists.txt  README.md  _build  install  notest.txt  package-lock.json  scratch  test
apps/: CMakeLists.txt
apps/ag/: CMakeLists.txt
apps/base16-shell/: .bash_profile  .bashrc  CMakeLists.txt
apps/cmake/: CMakeLists.txt
apps/cmatrix/: .bashrc  CMakeLists.txt
apps/ctags/: CMakeLists.txt
apps/docker/: CMakeLists.txt
apps/fd/: CMakeLists.txt  build
apps/fzf/: .bash_profile  CMakeLists.txt  build.sh
apps/git/: .bashrc  CMakeLists.txt
apps/golang/: CMakeLists.txt  install
apps/highlight/: .bash_profile  CMakeLists.txt
apps/htop/: CMakeLists.txt
apps/kitty/: .bash_profile  CMakeLists.txt
apps/neovim/: .bashrc  CMakeLists.txt  install
apps/nvm/: .bash_profile  .bashrc  build  install
apps/pipes/: .bashrc
apps/pyenv/: .bash_profile  CMakeLists.txt  build  install
apps/rez/: .bashrc  CMakeLists.txt
apps/rg/: CMakeLists.txt  build
apps/rust/: CMakeLists.txt
apps/screen/: CMakeLists.txt
apps/terminator/: install
apps/termpix/: CMakeLists.txt  build
apps/tree/: CMakeLists.txt
docker/: build  dockerfile  (+2 more)
src/apps/: CMakeLists.txt
src/apps/ag/: .bash_profile  .bashrc  CMakeLists.txt
src/apps/base16-shell/: .bashrc  CMakeLists.txt
src/apps/bat/: .bash_profile  CMakeLists.txt  build
src/apps/clang/: CMakeLists.txt
src/apps/cmake/: .bash_profile  CMakeLists.txt
src/apps/cmatrix/: .bash_profile  CMakeLists.txt
src/apps/ctags/: .bash_profile  CMakeLists.txt
src/apps/docker/: .bash_profile  CMakeLists.txt
src/apps/fd/: .bash_profile  CMakeLists.txt  build
src/apps/fzf/: .bash_profile  .bashrc  CMakeLists.txt  build.sh
src/apps/git/: .bash_profile  .install  CMakeLists.txt
src/apps/golang/: .bash_profile  CMakeLists.txt  install
src/apps/highlight/: .bash_profile  CMakeLists.txt
src/apps/htop/: .bash_profile  CMakeLists.txt
src/apps/kitty/: .bash_profile  CMakeLists.txt  kitty
src/apps/less/: .bash_profile  .bashrc  CMakeLists.txt
src/apps/llvm/: .bash_profile  CMakeLists.txt
src/apps/mongodb/: .bash_profile  CMakeLists.txt
src/apps/nvim/: .bash_profile  .bashrc  .install  .vimrc  CMakeLists.txt  install  vim
src/apps/nvm/: .bash_profile  .install  CMakeLists.txt  build  install
src/apps/pipes/: CMakeLists.txt
src/apps/pyenv/: .bash_profile  .bashrc  CMakeLists.txt  build  install
src/apps/rez/: .bash_profile  CMakeLists.txt
src/apps/rg/: .bash_profile  CMakeLists.txt  build
src/apps/robo3t/: .bash_profile  .bashrc  CMakeLists.txt
src/apps/rust/: .bash_profile  CMakeLists.txt
src/apps/screen/: .bash_profile  CMakeLists.txt
src/apps/terminator/: CMakeLists.txt  install
src/apps/termpix/: .bash_profile  CMakeLists.txt  build
(+26 files in other folders)
