# Languages
add_subdirectory(pyenv)
add_subdirectory(golang)

# Apps
add_subdirectory(ag)
add_subdirectory(cmake)
add_subdirectory(cmatrix)
add_subdirectory(fzf)
add_subdirectory(git)
add_subdirectory(highlight)
add_subdirectory(htop)
add_subdirectory(pipes)
add_subdirectory(screen)
add_subdirectory(tree)

# Editors
add_subdirectory(neovim)
