# Languages
add_subdirectory(pyenv)
add_subdirectory(nvm)
add_subdirectory(golang)
add_subdirectory(rust)

# Apps
add_subdirectory(ag)
add_subdirectory(base16-shell)
add_subdirectory(cmake)
add_subdirectory(cmatrix)
add_subdirectory(ctags)
add_subdirectory(docker)
add_subdirectory(fd)
add_subdirectory(fzf)
add_subdirectory(git)
add_subdirectory(highlight)
add_subdirectory(htop)
add_subdirectory(pipes)
add_subdirectory(rez)
add_subdirectory(rg)
add_subdirectory(screen)
add_subdirectory(termpix)
add_subdirectory(tmux)
add_subdirectory(tree)

# Terminals
add_subdirectory(kitty)

# Editors
add_subdirectory(neovim)
