# Languages
add_subdirectory(pyenv)
add_subdirectory(nvm)
add_subdirectory(golang)
add_subdirectory(rust)

# Apps
add_subdirectory(ag)
add_subdirectory(base16-shell)
add_subdirectory(bat)
# add_subdirectory(clang)
add_subdirectory(cmake)
add_subdirectory(cmatrix)
add_subdirectory(ctags)
add_subdirectory(docker)
add_subdirectory(fd)
add_subdirectory(fzf)
add_subdirectory(git)
add_subdirectory(highlight)
add_subdirectory(htop)
add_subdirectory(less)
# add_subdirectory(llvm)
add_subdirectory(mongodb)
# add_subdirectory(pipes)
add_subdirectory(rez)
add_subdirectory(rg)
add_subdirectory(robo3t)
add_subdirectory(screen)
add_subdirectory(terminator)
add_subdirectory(termpix)
add_subdirectory(tmux)
add_subdirectory(tree)

# Terminals
add_subdirectory(kitty)

# Editors
add_subdirectory(nvim)
